--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* 
     ---------------------------------------------------------------
     Add your name to this file below:
-    NAME: 
+    NAME: Marisa Gregory
     ---------------------------------------------------------------
 */
 
@@ -24,13 +24,20 @@
 
     /* Font Stacks */
     /* add the two font stacks here */
+	--heading-fonts: 'Seymour One', Impact, sans-serif;
+	--body-fonts: Lato, Arial, sans-serif;
+
 }
 
 body{
 	/* set the font family to Lato, Arial, sans-serif (--body-fonts) */
-	/* Set the line height to 1.5 */
+	font-family: var(--body-fonts);
+		/* Set the line height to 1.5 */
+		line-height: 1.5;
 	/* set the font size to 1.1rem	*/
+		font-size: 1.1rem;
 	/* set the font color to #222 (--dk-gray) */
+		color: var(--dk-gray);
 	margin: 0;
 	padding: 0;
 }
@@ -43,6 +50,10 @@ header{
 }
 
 h1, h2, h3{
+	text-align: center;
+	font-family: var(--heading-fonts);
+	font-variant: small-caps;
+
 	/* center align the text */
 	/* use a web font here (instructions on page) */
 	/* make the heading text all small caps style */
@@ -57,6 +68,7 @@ h2{
 h3{
 	margin: 0;
 	padding: 4px;
+	text-decoration: solid underline var(--mint) 4px;
 	/* add an underline like the one on the h2s to the h3s, but make it solid and mint color */
 }
 
