--- a/styles.css
+++ b/styles.css
@@ -84,9 +84,15 @@ nav ul{
 
 nav a{
 	/* make these display as block level elements */
+	display: block;
 	margin: 1rem auto;
 	padding: 1rem;
 	background-color: var(--tiffany);
+	color: var(--dk-gray);
+	text-align: center;
+	text-decoration: none;
+	font-size: 1.2rem;
+	font-weight: 600;
 	/* set the font color to #222 (--dk-gray) */
 	/* center align the text */
 	/* remove the underline */
@@ -113,8 +119,11 @@ section{
 
 p{
 	/* set a max-width of 55 characters */
+	max-width: 55ch;
 	/* add an indent on the first line of 2rem */
+	text-indent: 2rem;
 	/* center those paragraphs (not the text) on the page */
+	margin: 0 auto;
 	padding: 0.5rem;
 }
 
@@ -128,10 +137,12 @@ a:hover{
 
 dl, ol, main ul{
 	/* limit the width of these lists to 55 characters */
+	max-width: 55ch;
 	margin: 1rem auto;
 }
 
 dt{
+	font-weight: bold;
 	/* make this font display in bold weight */
 }
 
